--- a/index.html
+++ b/index.html
@@ -5,5 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <img src="img/snaps.png" alt="snaps" />
+    <img src="img/fanta.png" alt="fanta" />
+    <img src="img/cola.png" alt="cola" />
+    <img src="img/øl.png" alt="øl" />
+  </body>
 </html>
