--- a/array.html
+++ b/array.html
@@ -3,12 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Array</title>
   </head>
   <body>
     <ul></ul>
 
     <script>
+      const bil = {
+        brand: "BMW",
+        model: "M3",
+        drivmiddel: "Diesel",
+        passagere: ["Peter", "Alan", "mor"],
+      };
+
       const liste = document.querySelector("ul");
 
       const frugter = ["banan", "æble", "citron"];
