--- a/playliste.html
+++ b/playliste.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Playliste</title>
   </head>
   <body>
     <h1>Playliste</h1>
@@ -25,9 +25,9 @@
         "sang10",
       ];
 
-      sange.forEach(putListe);
+      sange.forEach(lavListe);
 
-      function putListe(element, i) {
+      function lavListe(element, i) {
         console.log(element);
         liste.innerHTML += "<li>" + element + "</li>";
       }
