--- a/ovelse3.html
+++ b/ovelse3.html
@@ -49,6 +49,9 @@
       klon.querySelector("h2").textContent = kjoler.længde;
       klon.querySelector("h2").textContent = kjoler.materiale;
       klon.querySelector("h3").textContent = kjoler.farver;
+
+      const beholder = document.querySelector("body");
+      beholder.appendChild(klon);
     }
   </script>
 </html>
