--- a/JSON og fetch øvelse/ovelse.html
+++ b/JSON og fetch øvelse/ovelse.html
@@ -9,7 +9,17 @@
     <header>
       <h1>JSON Fetch example</h1>
     </header>
-    <main></main>
+    <main>
+      <section id="teacher_list">
+        <h2>Teachers</h2>
+      </section>
+    </main>
+    <template>
+      <article>
+        <h3></h3>
+        <p></p>
+      </article>
+    </template>
     <script src="script.js"></script>
   </body>
 </html>
