--- a/index.html
+++ b/index.html
@@ -3,12 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Index</title>
   </head>
-  <body>
-    <img src="img/snaps.png" alt="snaps" />
-    <img src="img/fanta.png" alt="fanta" />
-    <img src="img/cola.png" alt="cola" />
-    <img src="img/øl.png" alt="øl" />
-  </body>
+  <body></body>
+  <script src="java.js"></script>
 </html>
