--- a/forms/form.html
+++ b/forms/form.html
@@ -12,7 +12,7 @@
     </header>
     <main>
       <div class="Kontaktformular">
-        <form>
+        <form netlify>
           <div class="form_felt">
             <div>
               <label for="Full_name">Fulde navn:</label>
