--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Index</title>
   </head>
-  <body></body>
+  <body>
+    <main>
+      <nav>
+        <ul>
+          <li>
+            <a href="forms/form.html">Forms øvelse</a>
+          </li>
+        </ul>
+      </nav>
+    </main>
+  </body>
   <script src="java.js"></script>
 </html>
